<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_bug_report"
        android:icon="@drawable/ic_action_action_bug_report"
        android:title="@string/action_bug_report" />
    <item
        android:id="@+id/action_social_share"
        android:icon="@drawable/ic_action_social_share"
        android:title="@string/action_social_share" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_action_delete"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_content_add"
        android:icon="@drawable/ic_action_content_add"
        android:title="@string/action_content_add" />
    <item
        android:id="@+id/ic_github"
        android:icon="@drawable/ic_github"
        android:title="@string/ic_github" />
</menu>
